# roses

./: .gitignore  .pre-commit-config.yaml  README.md  data.dvc  model.dvc  pyproject.toml  results.csv  rfc.pkl  setup.cfg
.dvc/: config
config/: rfc.yaml
outputs/2023-10-12/21-11-09/.hydra/: hydra.yaml
outputs/2023-10-12/21-11-38/.hydra/: hydra.yaml
outputs/2023-10-12/21-12-17/.hydra/: hydra.yaml
roses/: commands.py  infer.py  main.py  net_model.py  roses_dataset.py  run_server.py  train.py
