[tool.poetry]
name = "roses"
version = "0.0.0"
description = ""
authors = ["Melnik Fedor"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.11.4"
scikit-learn = "^1.3.1"
numpy = "^1.26.0"

[tool.poetry.dev-dependencies]
pre-commit = "==4.3.0"

[tool.black]
line-length = 90
target-version = ["py39"]

[tool.isort]
src_paths = ["ds_project"]
profile = "black"
line_length = 90
lines_after_imports = 2

[tool.nbqa.config]
black = "pyproject.toml"
isort = "pyproject.toml"
flake8 = "setup.cfg"

[tool.nbqa.addopts]
flake8 = ["--extend-ignore=E402"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
