[tool.poetry]
name = "roses"
version = "0.1.0"
description = ""
authors = ["bezro <bezrogota@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10"
scikit-learn = "1.3.0"
pre-commit = "2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
